# simplerecords

./: Cargo.toml  README.md
examples/basic/: Cargo.toml  blacklist.rules  master.rules  whitelist.rules
examples/basic/src/: main.rs
examples/options/: Cargo.toml  permissions.rules  users.rules
examples/options/src/: main.rs
src/: document.rs  error.rs  field.rs  filter.rs  lib.rs  options.rs  pass.rs  record.rs  recordset.rs  schema.rs  signature.rs
src/tests/: clear_comment.rs  mod.rs  split_args.rs  split_col.rs
